# kleo-cw20

./: .gitignore  Cargo.toml  Makefile  NOTICE
.circleci/: config.yml
contracts/klmd-airdrop/: Cargo.toml
contracts/klmd-airdrop/examples/: schema.rs
contracts/klmd-airdrop/schema/: already_claimed_response.json  execute_msg.json  merkle_root_response.json  query_msg.json
contracts/klmd-airdrop/src/: contract.rs  msg.rs  state.rs
contracts/klmd-airdrop/testdata/: airdrop_stage_1_list.json  airdrop_stage_2_test_data_failure.json
contracts/klmd-custom-proposal/: Cargo.toml
contracts/klmd-custom-proposal/examples/: schema.rs
contracts/klmd-custom-proposal/schema/: execute_msg.json  instantiate_msg.json  list_proposals_response.json  proposal_response.json  query_msg.json  reverse_proposals_response.json
contracts/klmd-custom-proposal/src/: contract.rs  error.rs  msg.rs  query.rs  staking_tests.rs  state.rs  tests.rs
contracts/klmd-custom-proposal/src/testing/: execute.rs  instantiate.rs  mod.rs  tests.rs
contracts/klmd-custom-vesting/: Cargo.toml
contracts/klmd-custom-vesting/examples/: schema.rs
contracts/klmd-custom-vesting/schema/: execute_msg.json  instantiate_msg.json  owner_address_response.json  query_msg.json  token_address_response.json  vesting_account_response.json
contracts/klmd-custom-vesting/src/: contract.rs  integration_testing.rs  lib.rs  msg.rs  state.rs
contracts/klmd-cw20/: Cargo.toml
contracts/klmd-cw20/examples/: schema.rs
contracts/klmd-cw20/src/: contract.rs  msg.rs
contracts/klmd-cw3-fixed-multisig/: Cargo.toml
contracts/klmd-cw3-fixed-multisig/examples/: schema.rs
contracts/klmd-cw3-fixed-multisig/src/: contract.rs
contracts/klmd-dao-vesting-voting-power/: Cargo.toml
contracts/klmd-dao-vesting-voting-power/examples/: schema.rs
contracts/klmd-dao-vesting-voting-power/schema/: instantiate_msg.json
contracts/klmd-dao-vesting-voting-power/src/: contract.rs  error.rs  integration_testing.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/klmd-rev-share/: Cargo.toml
contracts/klmd-rev-share/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/klmd-vesting/: Cargo.toml  README.md
contracts/klmd-vesting/examples/: schema.rs
contracts/klmd-vesting/schema/: cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  payment_state.json  payments_response.json  query_msg.json  vesting_account_response.json
contracts/klmd-vesting/src/: contract.rs  msg.rs  state.rs  testing.rs
javascript/: airdrop_stage1_testnet_list.json  airdrop_stage_list.json  configuration.json  index.js  index.ts  package-lock.json  package.json  tsconfig.json
