[workspace]
members = ["contracts/*"]

[profile.release.package.klmd-cw20]
codegen-units = 1
incremental = false

[profile.release.package.cw20-merkle-airdrop]
codegen-units = 1
incremental = false

[profile.release.package.klmd-custom-vesting]
codegen-units = 1
incremental = false

[profile.release.package.klmd-dao-vesting-voting-power]
codegen-units = 1
incremental = false

[profile.release.package.klmd-custom-proposal]
codegen-units = 1
incremental = false

[profile.release.package.klmd-rev-share]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
