[package]
name = "klmd-custom-proposal"
version = "0.1.0"
authors = ["kleomedes-dev-team <https://kleomed.es/>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13"
cw-utils = "0.13"
cw2 = "0.13"
cw20 = "0.13"
cw3 = "0.13"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw-core = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git", features = ["library"] }
cw-core-macros = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cw-core-interface = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
voting = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
indexable-hooks = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
proposal-hooks = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
vote-hooks = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13"
cw4-voting = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cw20-balance-voting = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cw20-staked-balance-voting = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
testing = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cw20-stake = { tag = "v1.0.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cw20-base = "0.13"
cw4 = "0.13"
cw4-group = "0.13"

