[package]
name = "klmd-rev-share"
version = "0.1.0"
authors = ["kleomedes-dev-team <https://kleomed.es/>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cosmwasm-std = { version = "1.1" }
cosmwasm-storage = { version = "1.1" }
cw-storage-plus = "0.16"
cw-utils = { version = "0.13" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0" }
cw2 = { version = "0.13" }
cw20 = { version = "0.13" }
cw20-stake = { tag = "v2.1.0", git = "https://github.com/DA0-DA0/dao-contracts.git", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = {  version = "0.13" }
cw20-base = {  version = "0.13", features = ["library"] }
